@@ -18,10 +18,12 @@ repositories {
 }
 
 dependencies {
+
     implementation("com.github.Minestom", "Minestom", "6b8a4e4cc9") // minstom itself
     implementation("com.google.code.gson:gson:2.10.1") // serializing
     implementation("org.slf4j:slf4j-api:2.0.13") // logging
     implementation("net.kyori:adventure-text-minimessage:4.16.0")// better components
+    implementation("mysql:mysql-connector-java:8.0.28") //mysql connector
     implementation("org.tomlj:tomlj:1.1.1") // Config lang
     implementation("com.rabbitmq:amqp-client:5.21.0") // Message broker
 }
@@ -31,11 +33,6 @@ tasks.withType<Jar> {
         attributes["Main-Class"] = "net.cytonic.cytosis.Cytosis"
     }
 }
-tasks.withType<JavaCompile> {
-    // use String templates
-    options.compilerArgs.add("--enable-preview")
-}
-
 tasks.withType<JavaCompile> {
     // use String templates
     options.compilerArgs.add("--enable-preview")
@@ -51,5 +48,6 @@ tasks {
         }
         mergeServiceFiles()
         archiveFileName.set("cytosis.jar")
+        //destinationDirectory.set(file(providers.gradleProperty("server_dir").get()))
     }
 }
